Upated json structured data for SEO

--- a/index.html
+++ b/index.html
@@ -39,20 +39,17 @@
   <!-- CSS & JS -->
   <link rel="stylesheet" href="css/main.css" />
   <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-  "@context": "http://schema.org",
-  "@type": "Person",
-  "url": "http://www.thomasrudge.co.uk",
-  "honorificPrefix": "Mr",
-  "givenName": "Thomas",
-  "additionalName": "Edward",
-  "familyName": "Rudge",
-  "image": "images/logos/me.png",
-  "gender": "http://schema.org/Male",
-  "email": "hello@thomasrudge.co.uk"
-  }
-  </script>
+  <script type='application/ld+json'>
+{
+  "@context": "http://www.schema.org",
+  "@type": "person",
+  "name": "Thomas Rudge",
+  "jobTitle": "Business Analyst",
+  "url": "www.thomasrudge.co.uk",
+  "email": "hello@thomasrudge.co.uk",
+  "image": "www.thomasrudge.co.uk/images/logos/me.png"
+}
+ </script>
   <!-- Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png" />
