--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta property="og:title" content="Thomas Rudge" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.thomasrudge.co.uk" />
-  <meta property="og:image" content="images/bg/ogimage.gif" />
+  <meta property="og:image" content="http://www.thomasrudge.co.uk/images/bg/ogimage.gif" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
