HTML tag OG pregix.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      www.thomasrudge.co.uk
 -->
 
-<html lang="en-GB">
+<html lang="en-GB" prefix="og:http://ogp.me/ns#">
 <head>
   <meta charset="utf-8" />
   <title>Thomas Rudge</title>
