--- a/html/professional.html
+++ b/html/professional.html
@@ -988,6 +988,24 @@
         </table>
       </div>
     </div>
+    <div class=gen_div>
+      <p class='gen_text justify med_text margin70'>
+        <span id='awards' class='gen_title blue_text'><u>Testimonials and Awards</u></span>
+        Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme.<br /> – Awarded by CIO of Technology Department & COO of Barclays Africa
+        <br />
+        <br />
+        Global Payments Award, for playing a critical role in the resolution of a BAU system incident.<br /> – Awarded by Vice Chairman of Global Payments
+        <br />
+        <br />
+        “He is able to couple the knowledge he has built up with his intelligent, thoughtful way of assessing a task, and this has given him a good reputation across local and senior management within RSU.”<br /> – Stewart Makin, Assistant Vice President (Caption from 2012 appraisal*)
+        <br />
+        <br />
+        “Tom has had a fantastic impact on the department’s financials this year…his ability to make departmental changes to improve our position is fantastic.”<br /> – Nikki Turner, Operations Manager (Caption from 2011 appraisal*)
+        <br />
+        <br />
+        <span class=small_text>* Past appraisals available upon request.</span>
+      </p>
+    </div>
     <br />
     <br />
     <!-- Contact and Download Box -->
