Fixed broken links, and removed subjective time frame.

--- a/html/professional.html
+++ b/html/professional.html
@@ -174,7 +174,7 @@
     <div class='block_ gen_div'>
       <p class='gen_text justify med_text margin70'>
         <span class='gen_title title_text'>Curriculum Vitae</span><br />
-        Business Analyst and Developer with over 8 year's experience in Business and IT Change.
+        Technical Business Analyst and Developer.
       </p>
       <p class='gen_text justify med_text margin70 no_bottom'>
         <span class='gen_title no_top no_bottom blue_text'><u>Summary</u></span><br />
