--- a/html/software.html
+++ b/html/software.html
@@ -205,14 +205,14 @@
     </div>
     <hr/>
     <div class='gen_div margin40 mobile_parent'>
-      <a href="https://www.micro-reddit.herokuapp.com" title="Micro Reddit">
+      <a href="https://micro-reddit.herokuapp.com" title="Micro Reddit">
         <img class='genphoto mobile_child img150 soft_image' src="../images/logos/micro_reddit.png" alt="Micro Reddit" />
       </a>
       <p class='gen_text justify med_text mobile_child'>
       After building a simple <a class=normal_link rel="noopener noreferrer" target="_blank" href="https://toms-simple-blogger.herokuapp.com/">blogging website</a> and
       <a class=normal_link rel="noopener noreferrer" href="https://toms-micropost-app.herokuapp.com" target="_blank">completing</a> Michael Hartl's
       <a class=normal_link href="https://www.railstutorial.org/book" rel="noopener noreferrer" target="_blank">ruby tutorial</a> I found myself wanting to
-      try something a bit more challenging. So I decided to <a class=red_link href="https://www.micro-reddit.herokuapp.com" rel="noopener noreferrer" target="_blank">rebuild reddit</a>
+      try something a bit more challenging. So I decided to <a class=red_link href="https://micro-reddit.herokuapp.com" rel="noopener noreferrer" target="_blank">rebuild reddit</a>
       from scratch.
       </p>
     </div>
