Adding new career history

--- a/html/professional.html
+++ b/html/professional.html
@@ -174,35 +174,29 @@
     <div class='block_ gen_div'>
       <p class='gen_text justify med_text margin70'>
         <span class='gen_title title_text'>Curriculum Vitae</span><br />
-        Technical Business Analyst and Developer.
+        Technical Business Analyst with over 10 years’ experience in banking business and IT Change.
       </p>
       <p class='gen_text justify med_text margin70 no_bottom'>
         <span class='gen_title no_top no_bottom blue_text'><u>Summary</u></span><br />
       </p>
       <ul  class='gen_text justify med_text margin70 no_top' type='disc'>
         <li>
-        Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a POS and cash management system currently being distributed in north east India.
+        Worked on system adoptions and migrations. Deeply involved with solution assessment, requirements management, operations process redesign and enhancement, user acceptance testing, and implementation planning and execution. Firm knowledge of the end to end project life cycle and agile, waterfall, methodologies.
         </li>
         <li>
-        Business Analyst on large scale system implementations and upgrades. Deeply involved with solution assessment, requirements management, operations process redesign and enhancement, user acceptance testing, and implementation planning and execution. A firm knowledge of the end to end <a class=normal_link href='#projects'>project</a> life cycle and methodologies.
+        Designed and built analysis and testing programs for the JPMC biennial price quality assessment, used to process millions of vendor and internal trade prices and drive the firm-wide pricing policy.
         </li>
         <li>
-        Routinely identified system efficiency gains through bespoke SQL and data analysis. Implemented configuration changes that resulted in a five percent increase in system straight through processing, moving tens of thousands of records away from manual intervention.
-        </li>
-        <li>
-        <a class=normal_link href='#awards'>Awarded</a> Barclays Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme in the roles of Business Analyst and Implementation Manager. Awarded by CIO of Technology and COO of Barclays Africa.
-        </li>
-        <li>
-        Proven leadership skills with extensive experience managing operation, test, and implementation teams in the UK and India.
-        </li>
-        <li>
-        High risk awareness. Completed risk assessments, created control frameworks, owned and performed audits for new and updated operational processes and systems; both internally and in collaboration with third parties.
+        Identified and implemented changes in Barclays reconciliation business logic that resulted in a 5% increase in system straight through processing, moving tens of thousands of records away from manual intervention.
         </li>
         <li>
         Solid communication skills. Experienced in facilitating requirements workshops, brainstorming sessions, training sessions, presentations, and meetings at all levels. Produced bespoke reports and MI for senior management.
         </li>
         <li>
-        Proficient in Ruby, Python, Javascript, SQL languages; with good understanding of data structures and OOP / MVC principles.
+        High risk awareness. Completed risk assessments, created control frameworks, owned and performed audits for new and updated operational processes and systems; both internally and in collaboration with third parties.
+        </li>
+        <li>
+        Proficient in Ruby, Python, Javascript, SQL languages; with good understanding of data structures and OOP / MVC principles. Check out my <a class=normal_link href=https://github.com/Thomas-Rudge>GitHub</a>.
         </li>
       </ul>
     </div>
@@ -260,7 +254,7 @@
             <span class='table_img skill' id=skill_access></span> MS Access
           </li>
           <li>
-            <span class='table_img skill' id=skill_uat></span> UAT
+            <span class='table_img skill' id=skill_uat></span> Testing
           </li>
           <li>
             <span class='table_img skill' id=skill_opt></span> Optimisation
@@ -272,7 +266,7 @@
             <span class='table_img skill' id=skill_risk></span> Risk Analysis
           </li>
           <li>
-            <span class='table_img skill' id=skill_ops></span> Operations Analysis
+            <span class='table_img skill' id=skill_ops></span> Data Analysis
           </li>
         </ul>
       </div>
@@ -334,7 +328,7 @@
             <span class=small_text>Optimisation</span> <span class='table_img skill' id=skill_opt></span>
             </td>
             <td>
-            UAT <span class='table_img skill' id=skill_uat></span>
+            Testing <span class='table_img skill' id=skill_uat></span>
             </td>
             <td>
             <span class=small_text>Problem Solving</span> <span class='table_img skill' id=skill_prob></span>
@@ -343,7 +337,7 @@
             Risk Analysis <span class='table_img skill' id=skill_risk></span>
             </td>
             <td>
-            <span class=small_text>Ops Analysis</span> <span class='table_img skill' id=skill_ops></span>
+            <span class=small_text>Data Analysis</span> <span class='table_img skill' id=skill_ops></span>
             </td>
             <td>
             </td>
@@ -362,6 +356,25 @@
       <div id=short_table1 class=margin70>
         <span class='margin40 gen_title small_text'>Professional</span>
         <table class='standard_table decorated margin40 no_top'>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Business Analyst AVP <span class=small_text>(Reference Data)</span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Jul 2017 - Present
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Bournemouth, UK
+            </td>
+          </tr>
           <tr>
             <th>
             </th>
@@ -520,6 +533,37 @@
             <th>
             Location
             </th>
+          </tr>
+          <tr class=exp>
+            <td class=centred_txt>
+            Jul 2017
+            </td>
+            <td class=centred_txt>
+            Present
+            </td>
+            <td>
+              Business Analyst AVP <span class=small_text>(Reference Data)</span>
+              <div class=moreinfo>
+			    <p class="gen_text moreinfo_text margin0 justify">
+                  <span class=centred style="float:right;"><b><u>Business Analyst (AVP)</u></b></span>
+                  <br/><br/>
+                  Designed and built analysis and testing programs for the JPMC biennial price quality assessment, used
+                  to process millions of vendor and internal trade prices and drive the firm-wide pricing policy.
+                  <br/><br/>
+                  Raised multiple changes to enhance the pricing service and reduce operational overhead.
+                  <br/><br/>
+                  Automated common BA tasks, including data enrichment via system API, testing, and data analysis.
+                  <br/><br/>
+                  Created Business Analyst documentation templates and advised best practice.
+                </p>
+              </div>
+            </td>
+            <td>
+            JPMorgan Chase & Co
+            </td>
+            <td>
+            Bournemouth, UK
+            </td>
           </tr>
           <tr class=exp>
             <td class=centred_txt>
@@ -990,20 +1034,16 @@
     </div>
     <div class=gen_div>
       <p class='gen_text justify med_text margin70'>
-        <span id='awards' class='gen_title blue_text'><u>Testimonials and Awards</u></span>
-        Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme.<br /> – Awarded by CIO of Technology Department & COO of Barclays Africa
+        <span id='awards' class='gen_title blue_text'><u>Awards</u></span>
+        JPMC Going the Extra Mile Award for supporting other projects analysis work, developing automated analytical tools for the team, and advising on best practice and document templates.
         <br />
         <br />
-        Global Payments Award, for playing a critical role in the resolution of a BAU system incident.<br /> – Awarded by Vice Chairman of Global Payments
+        Barclays Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme.<br /> – Awarded by CIO of Technology Department & COO of Barclays Africa
         <br />
         <br />
-        “He is able to couple the knowledge he has built up with his intelligent, thoughtful way of assessing a task, and this has given him a good reputation across local and senior management within RSU.”<br /> – Stewart Makin, Assistant Vice President (Caption from 2012 appraisal*)
+        Barclays Global Payments Award, for playing a critical role in the resolution of a BAU system incident.<br /> – Awarded by Vice Chairman of Global Payments
         <br />
         <br />
-        “Tom has had a fantastic impact on the department’s financials this year…his ability to make departmental changes to improve our position is fantastic.”<br /> – Nikki Turner, Operations Manager (Caption from 2011 appraisal*)
-        <br />
-        <br />
-        <span class=small_text>* Past appraisals available upon request.</span>
       </p>
     </div>
     <br />
@@ -1020,10 +1060,10 @@
         Download
       </p>
       <div class='centred margin0'>
-        <a href='../other/Thomas E. Rudge - CV 2017.pdf' rel="noopener noreferrer" target='_blank'>
+        <a href='../other/Thomas E. Rudge - CV 2019.pdf' rel="noopener noreferrer" target='_blank'>
           <img src='../images/logos/pdf.gif' style='padding-right: 10px;' />
         </a>
-        <a href='../other/Thomas E. Rudge - CV 2017.docx' rel="noopener noreferrer" target='_blank'>
+        <a href='../other/Thomas E. Rudge - CV 2019.docx' rel="noopener noreferrer" target='_blank'>
           <img src='../images/logos/word.gif' />
         </a>
       </div>
