Updated proffesional page

--- a/html/professional.html
+++ b/html/professional.html
@@ -367,7 +367,7 @@
           </tr>
           <tr>
             <td>
-            Jul 2017 - Present
+            2017 - Present
             </td>
           </tr>
           <tr>
@@ -386,7 +386,7 @@
           </tr>
           <tr>
             <td>
-            Oct 2014 - Aug 2016
+            2014 - 2016
             </td>
           </tr>
           <tr>
@@ -405,7 +405,7 @@
           </tr>
           <tr>
             <td>
-            Jul 2013 - Jul 2014
+            2013 - 2014
             </td>
           </tr>
           <tr>
@@ -424,7 +424,7 @@
           </tr>
           <tr>
             <td>
-            Sep 2010 - Jun 2013
+            2010 - 2013
             </td>
           </tr>
           <tr>
@@ -443,7 +443,7 @@
           </tr>
           <tr>
             <td>
-            Mar 2008 - Aug 2010
+            2008 - 2010
             </td>
           </tr>
           <tr>
@@ -462,7 +462,7 @@
           </tr>
           <tr>
             <td>
-            Jun 2007 - Feb 2008
+            2007 - 2008
             </td>
           </tr>
           <tr>
@@ -481,7 +481,7 @@
           </tr>
           <tr>
             <td>
-            Nov 2006 - May 2007
+            2006 - 2007
             </td>
           </tr>
           <tr>
@@ -506,7 +506,7 @@
           </tr>
           <tr>
             <td>
-            Jul 2014 - Jul 2015
+            2014 - 2015
             </td>
           </tr>
           <tr>
@@ -536,7 +536,7 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Jul 2017
+            2017
             </td>
             <td class=centred_txt>
             Present
@@ -567,10 +567,10 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Oct 2014
+            2014
             </td>
             <td class=centred_txt>
-            Aug 2016
+            2016
             </td>
             <td>
               Freelance <span class=small_text>(Software, Graphic Design)</span>
@@ -598,10 +598,10 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Jul 2013
+            2013
             </td>
             <td class=centred_txt>
-            Jul 2014
+            2014
             </td>
             <td>
                Career Break
@@ -624,10 +624,10 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Sep 2010
+            2010
             </td>
             <td class=centred_txt>
-            Jun 2013
+            2013
             </td>
             <td>
                Technical SME (Analyst)
@@ -663,10 +663,10 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Mar 2008
+            2008
             </td>
             <td class=centred_txt>
-            Aug 2010
+            2010
             </td>
             <td>
                Business Analyst, <span class=small_text>Corporate Change</span>
@@ -706,10 +706,10 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Jun 2007
+            2007
             </td>
             <td class=centred_txt>
-            Feb 2008
+            2008
             </td>
             <td>
                TLM System Administrator
@@ -733,10 +733,10 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Nov 2006
+            2006
             </td>
             <td class=centred_txt>
-            May 2007
+            2007
             </td>
             <td>
                Account Manager, <span class=small_text>Global Payments</span>
@@ -784,10 +784,10 @@
           </tr>
           <tr class=exp>
             <td class=centred_txt>
-            Jul 2014
+            2014
             </td>
             <td class=centred_txt>
-            Jul 2015
+            2015
             </td>
             <td>
                English Teacher
@@ -835,7 +835,7 @@
           </tr>
           <tr>
             <td>
-            Sep 2003 - Nov 2006
+            2003 - 2006
             </td>
           </tr>
           <tr>
@@ -854,7 +854,7 @@
           </tr>
           <tr>
             <td>
-            Jul 2001 - Jul 2003
+            2001 - 2003
             </td>
           </tr>
           <tr>
@@ -879,7 +879,7 @@
           </tr>
           <tr>
             <td>
-            Aug 2016 - Present
+            2016
             </td>
           </tr>
           <tr>
@@ -898,7 +898,7 @@
           </tr>
           <tr>
             <td>
-            Aug 2013 - Jan 2014
+            2013 - 2014
             </td>
           </tr>
           <tr>
@@ -917,7 +917,7 @@
           </tr>
           <tr>
             <td>
-            Aug 2013 - Oct 2013
+            2013 - 2013
             </td>
           </tr>
           <tr>
@@ -944,10 +944,10 @@
           </tr>
           <tr>
             <td class=centred_txt>
-            Sep 2003
+            2003
             </td>
             <td class=centred_txt>
-            Nov 2006
+            2006
             </td>
             <td>
             BA (Hons) Animation
@@ -958,10 +958,10 @@
           </tr>
           <tr>
             <td class=centred_txt>
-            Jul 2001
+            2001
             </td>
             <td class=centred_txt>
-            Jul 2003
+            2003
             </td>
             <td>
             National Diploma in Graphic Design
@@ -989,10 +989,10 @@
           </tr>
           <tr>
             <td class=centred_txt>
-            Aug 2016
+            2016
             </td>
             <td class=centred_txt>
-            Present
+            2017
             </td>
             <td>
             Web Development
@@ -1003,10 +1003,10 @@
           </tr>
           <tr>
             <td class=centred_txt>
-            Aug 2013
+            2013
             </td>
             <td class=centred_txt>
-            Jan 2014
+            2014
             </td>
             <td>
             Business Analysis Practitioner <span class=small_text>(IIBA Endorsed)</span>
@@ -1017,10 +1017,10 @@
           </tr>
           <tr>
             <td class=centred_txt>
-            Aug 2013
+            2013
             </td>
             <td class=centred_txt>
-            Oct 2013
+            2013
             </td>
             <td>
             Learn To Program: The Fundamentals
